Fixed up shift container. Need finalize swap accept

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,12 +8,12 @@
     display: flex;
     flex-direction: row;
     margin: 25px;
-    width: 30%;
+    width: 40%;
     height: 900px;
 }
 
 .calendar-container {
     background-color:coral;
     margin: 25px;
-    width: 70%;
+    width: 60%;
 }
