--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,5 +9,5 @@
 }
 
 .user-dashboard {
-    width: 50%;
+    width: 40%;
 }
